Atividade da aula 01

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-  Hello world
+  <h1>Atividade da aula 01</h1>
+  <p>Nome: Matheus Alves</p>
+  <p>PT3013049</p>
   <script src="script.js"></script>
 
  <!--
