--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <h1>Atividade da aula 01</h1>
   <p>Nome: Matheus Alves</p>
-  <p>PT3013049</p>
+  <p>Prontuário: PT3013049</p>
   <script src="script.js"></script>
 
  <!--
